# ui

./: .gitignore  report.docx  report.txt
QtSrc/activeqt/container/: qaxbase.cpp  qaxdump.cpp  qaxobject.cpp  qaxscript.cpp  qaxscriptwrapper.cpp  qaxselect.cpp  qaxwidget.cpp
QtSrc/activeqt/control/: qaxbindable.cpp  qaxfactory.cpp  qaxmain.cpp  qaxserver.cpp  qaxserverbase.cpp  qaxserverdll.cpp  qaxservermain.cpp
QtSrc/activeqt/shared/: qaxtypes.cpp
QtSrc/build-winmain-Desktop_Qt_5_13_0_GCC_64bit-Debug/: .qmake.stash
QtSrc/corelib/global/: qconfig.h
QtSrc/dbus/: qdbusabstractinterface.cpp  qdbusargument.cpp  qdbusconnection.cpp  qdbusdemarshaller.cpp  qdbusintegrator.cpp  qdbusinternalfilters.cpp  qdbusmarshaller.cpp  qdbusmessage.cpp  qdbusmetatype.cpp  qdbuspendingcall.cpp  qdbusserver.cpp  qdbusservicewatcher.cpp  qdbusutil.cpp
QtSrc/declarative/debugger/: qdeclarativedebug.cpp  qdeclarativedebugclient.cpp  qdeclarativedebuggerstatus.cpp  qdeclarativedebughelper.cpp  qdeclarativedebugserver.cpp  qdeclarativedebugservice.cpp  qdeclarativedebugtrace.cpp  qpacketprotocol.cpp
QtSrc/declarative/graphicsitems/: qdeclarativeanchors.cpp  qdeclarativeanimatedimage.cpp  qdeclarativeborderimage.cpp  qdeclarativeevents.cpp  qdeclarativeflickable.cpp  qdeclarativeflipable.cpp  qdeclarativefocuspanel.cpp  qdeclarativefocusscope.cpp  qdeclarativegraphicswidget.cpp  qdeclarativegridview.cpp  qdeclarativeimage.cpp  qdeclarativeimagebase.cpp  qdeclarativeimplicitsizeitem.cpp  qdeclarativeitem.cpp  qdeclarativeitemsmodule.cpp  qdeclarativelayoutitem.cpp  qdeclarativelistview.cpp  qdeclarativeloader.cpp  qdeclarativemousearea.cpp  (+14 more)
QtSrc/opengl/: qgl.cpp  qgl_egl.cpp  qgl_qws.cpp  qgl_symbian.cpp  qgl_win.cpp  qgl_wince.cpp  qgl_x11.cpp  qgl_x11egl.cpp  qglbuffer.cpp  qglcolormap.cpp  qglextensions.cpp  qglframebufferobject.cpp  qglpaintdevice.cpp  qglpixelbuffer.cpp  qglpixelbuffer_egl.cpp  qglpixelbuffer_win.cpp  qglpixelbuffer_x11.cpp  qglpixmapfilter.cpp  qglscreen_qws.cpp  qglshaderprogram.cpp  qgltexturepool.cpp  qglwindowsurface_qws.cpp  qgraphicsshadereffect.cpp  qgraphicssystem_gl.cpp  qpaintengine_opengl.cpp  qpixmapdata_gl.cpp  qpixmapdata_symbiangl.cpp  qpixmapdata_x11gl_egl.cpp  qwindowsurface_gl.cpp  qwindowsurface_x11gl.cpp
QtSrc/openvg/: qpaintengine_vg.cpp  qpixmapdata_vg.cpp  qpixmapfilter_vg.cpp  qvg_symbian.cpp  qvgimagepool.cpp  qwindowsurface_vg.cpp  qwindowsurface_vgegl.cpp
QtSrc/s60main/: newallocator_hook.cpp  qts60main.cpp  qts60main_mcrt0.cpp
QtSrc/svg/: qgraphicssvgitem.cpp  qsvgfont.cpp  qsvggenerator.cpp  qsvggraphics.cpp  qsvghandler.cpp  qsvgnode.cpp  qsvgrenderer.cpp  qsvgstructure.cpp  qsvgstyle.cpp  qsvgtinydocument.cpp  qsvgwidget.cpp
QtSrc/testlib/: qabstracttestlogger.cpp  qasciikey.cpp  qbenchmark.cpp  qbenchmarkevent.cpp  qbenchmarkmeasurement.cpp  qbenchmarkmetric.cpp  qbenchmarkvalgrind.cpp  qplaintestlogger.cpp  qsignaldumper.cpp  qtestbasicstreamer.cpp  qtestcase.cpp  qtestdata.cpp  qtestelement.cpp  qtestelementattribute.cpp  qtestfilelogger.cpp  qtestlightxmlstreamer.cpp  qtestlog.cpp  qtestlogger.cpp  qtestresult.cpp  qtesttable.cpp  qtestxmlstreamer.cpp  qtestxunitstreamer.cpp  qxmltestlogger.cpp
QtSrc/winmain/: qtmain_win.cpp
compact/: CMakeLists.txt
compact/impl/: CMakeLists.txt  compact_impl.cpp
compact/include/: ICompact.h  ISet.h
compact/src/: compact_impl.cpp
compact/tests/: CMakeLists.txt
compact/tests/src/: main.cpp
editor/: .gitignore  editor.c  editor.cbp  editor.cpp  editor.h  in.txt  kystyn.rc  main.c  main.cpp  menu.h  menu.rc  utils.c  utils.h  vim.txt  win.c  win.cpp  win.h  wndproc.c  wndproc.h
editor/tests/: vim.txt
logger/: CMakeLists.txt  logger_impl.cpp
logger/include/: ILogger.h
logger/src/: logger_impl.cpp
numbers/: CMakeLists.txt  main.cpp  rational.cpp  rational.h  real.cpp  real.h
problem/: problem.pro
problem/include/: IBrocker.h  IProblem.h  problem_impl.h
problem/src/: brocker_impl.cpp  problem_impl.cpp
set/: CMakeLists.txt  set_impl.cpp
set/include/: ISet.h
set/src/: set_impl.cpp
set/tests/: CMakeLists.txt
set/tests/include/: ISet.h
set/tests/src/: main.cpp
set_test/: CMakeLists.txt  main.cpp
solver/: solver.pro
solver/include/: IBrocker.h  ICompact.h  ILogger.h  IProblem.h  ISolver.h  IVector.h  solver_impl.h
solver/src/: brocker_impl.cpp  solver_impl.cpp
textedit/: main.cpp  textedit.cpp  textedit.h  textedit.pro  textedit.qdoc
user_app/: user_app.pro
user_app/include/: IBrocker.h  ICompact.h  ILogger.h  IProblem.h  ISolver.h  IVector.h
user_app/src/: main.cpp
vector/: CMakeLists.txt  vector_impl.cpp
vector/include/: IVector.h
vector/src/: vector_impl.cpp
vector/tests/: CMakeLists.txt
vector/tests/include/: ILogger.h  IVector.h  tester.h
vector/tests/src/: main.cpp
vector_test/: CMakeLists.txt  IVector.h  main.cpp
(+1410 files in other folders)
